# HsaeCode

./: 2plus.odt  README.md
helloWorld_IPCService/: CMakeLists.txt
helloWorld_IPCService/inc/: ThreadPool.h  qtstl.h  qtstl_global.h  test1.h
helloWorld_IPCService/inc/QtCore/: qconfig.h
helloWorld_IPCService/inc/QtCore/5.9.4/QtCore/private/: qconfig_p.h
helloWorld_IPCService/inc/QtSerialPort/: qtserialportversion.h
helloWorld_IPCService/lib/: libicui18n.so.56.1
helloWorld_IPCService/lib-arm/: libQt5SerialPort.so.5.9.4
helloWorld_IPCService/qt5数据依赖备份/QtCore库和头文件/: libQtSTL.so.1.0.0
helloWorld_IPCService/src/: main.cpp  test1.cpp
